--- a/dapp/index.html
+++ b/dapp/index.html
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Nouns DAO</title>
+    <title>Degen Dogs Club</title>
     <style>
       @font-face {
         font-family: 'Londrina Solid';
@@ -38,7 +38,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="backdrop-root"></div>
     <div id="overlay-root"></div>
-    <div id="root"></div>
+    <div id="root">Dogs</div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
