--- a/dapp/index.html
+++ b/dapp/index.html
@@ -38,7 +38,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="backdrop-root"></div>
     <div id="overlay-root"></div>
-    <div id="root">Dogs</div>
+    <div id="root">Degen Dogs</div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
