--- a/dapp/index.html
+++ b/dapp/index.html
@@ -493,7 +493,7 @@
       color: #fff;
     }
   </style>
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" type="image/png" href="/images/0.png">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="theme-color" content="#000000">
   <meta name="description"
@@ -503,9 +503,8 @@
   <title>Degen Dogs Club</title>
   <style>
     @font-face {
-      font-family: 'Londrina Solid';
-      src: url(/static/fonts/Londrina_Solid/LondrinaSolid-Black.ttf);
-      src: url(/static/fonts/Londrina_Solid/LondrinaSolid-Regular.ttf)
+      font-family: 'Bulky Pixels';
+      src: url(/css/bulky-pixels.regular.ttf);
     }
   </style>
   <link href="/css/bs.css" rel="stylesheet">
@@ -744,7 +743,7 @@
                         <li>treasury is controlled exclusively by nouns via governance</li>
                         <li>artwork is generative and stored directly on-chain (not IPFS)</li>
                         <li>no explicit rules for attribute scarcity, all nouns are equally rare</li>
-                        <li>'Nounders' receive rewards in the form of nouns (10% of supply for first 5 years)</li>
+                        <li>'Dogfathers' receive rewards in the form of nouns (10% of supply for first 5 years)</li>
                       </ul>
                     </div>
                   </div>
@@ -780,11 +779,11 @@
                   <div class="Documentation_cardHeader__xv_vO card-header">Governance ‘Slow Start’</div>
                   <div class="collapse">
                     <div class="card-body">
-                      <p>In addition to the precautions taken by Compound Governance, Nounders have given themselves a
+                      <p>In addition to the precautions taken by Compound Governance, Dogfathers have given themselves a
                         special veto right to ensure that no malicious proposals can be passed while the noun supply is
                         low. This veto right will only be used if an obviously harmful governance proposal has been
                         passed, and is intended as a last resort.</p>
-                      <p>Nounders will proveably revoke this veto right when they deem it safe to do so. This decision
+                      <p>Dogfathers will proveably revoke this veto right when they deem it safe to do so. This decision
                         will be based on a healthy noun distribution and a community that is engaged in the governance
                         process.</p>
                     </div>
@@ -840,7 +839,7 @@
                   <div class="Documentation_cardHeader__xv_vO card-header">Nounder's Rewards</div>
                   <div class="collapse">
                     <div class="card-body">
-                      <p>'Nounders' are the group of ten builders that initiated Nouns. Here are the Nounders:</p>
+                      <p>'Dogfathers' are the group of ten builders that initiated Nouns. Here are the Dogfathers:</p>
                       <ul>
                         <li><a class="Link_link__3euZY" href="https://twitter.com/cryptoseneca" target="_blank"
                             rel="noreferrer">@cryptoseneca</a></li>
@@ -862,7 +861,7 @@
                         <li><a class="Link_link__3euZY" href="https://twitter.com/lastpunk9999" target="_blank"
                             rel="noreferrer">@lastpunk9999</a></li>
                       </ul>
-                      <p>Because 100% of noun auction proceeds are sent to Nouns DAO, Nounders have chosen to compensate
+                      <p>Because 100% of noun auction proceeds are sent to Nouns DAO, Dogfathers have chosen to compensate
                         themselves with nouns. Every 10th noun for the first 5 years of the project (noun ids #0, #10,
                         #20, #30 and so on) will be automatically sent to the Nounder's multisig to be vested and shared
                         among the founding members of the project.</p>
