--- a/dapp/index.html
+++ b/dapp/index.html
@@ -667,7 +667,7 @@
           <div class="align-items-center row">
             <div class="col-lg-6">
               <div class="Banner_wrapper__1YbFc">
-                <h1>ONE NOUN,<br>EVERY DAY,<br>FOREVER.</h1>
+                <h1>DEGEN<br>DOGS<br>DO DEFI.</h1>
               </div>
             </div>
             <div class="col-lg-6">
