added footer blurb

--- a/dapp/index.html
+++ b/dapp/index.html
@@ -809,6 +809,20 @@
           </div>
         </div>
       </div>
+
+      <div class="Section_container__1zQTr undefined" style="background-color: white;">
+          <div class="container-lg">
+            <div class="align-items-center row">
+              <div class="col-lg-10 offset-lg-1">
+                <div class="Documentation_headerWrapper__xln_n">
+                  <p>Degen Dogs is a submission for the 2021 ETHOnline Hackathon, and is powered by Superfuid, Uniswap, Chainlink, Compound, DAI by Maker, and hosted on Skynet. The website (dapp) HTML and CSS are modified from Nounds DAO, as is the Auction House contract, which was itself modified from the Zora Auction House contract -- used under the GPL licence. Nouns is a very interesting project, <a href="https://nouns.wtf" target="_blank"></a>check it out</a>.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
     </div>
   </div>
   <script>
