--- a/dapp/index.html
+++ b/dapp/index.html
@@ -527,7 +527,7 @@
                 href="https://kovan.etherscan.io/address/"
                 class="NavBar_nounsNavLink__1_qpP nav-link">TREASURY Ξ <span id="treasury">0</span></span></a></div><a href="/dao"
               class="NavBar_nounsNavLink__1_qpP nav-link">DAO</a><a href="#"
-              class="NavBar_nounsNavLink__1_qpP NavBar_connectBtn__1uOYH nav-link" role="button">CONNECT WALLET</a>
+              class="NavBar_nounsNavLink__1_qpP NavBar_connectBtn__1uOYH nav-link connect" role="button">CONNECT WALLET</a>
           </div>
         </div>
       </nav>
@@ -816,131 +816,14 @@
 
     </div>
   </div>
-  <script>
-    ! function (e) {
-      function r(r) {
-        for (var n, a, i = r[0], c = r[1], f = r[2], p = 0, s = []; p < i.length; p++) a = i[p], Object.prototype
-          .hasOwnProperty.call(o, a) && o[a] && s.push(o[a][0]), o[a] = 0;
-        for (n in c) Object.prototype.hasOwnProperty.call(c, n) && (e[n] = c[n]);
-        for (l && l(r); s.length;) s.shift()();
-        return u.push.apply(u, f || []), t()
-      }
 
-      function t() {
-        for (var e, r = 0; r < u.length; r++) {
-          for (var t = u[r], n = !0, i = 1; i < t.length; i++) {
-            var c = t[i];
-            0 !== o[c] && (n = !1)
-          }
-          n && (u.splice(r--, 1), e = a(a.s = t[0]))
-        }
-        return e
-      }
-      var n = {},
-        o = {
-          2: 0
-        },
-        u = [];
+  <!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@alch/alchemy-web3@latest/dist/alchemyWeb3.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+  <script src="/js/abis.js"></script>
+  <script src="/js/dapp.js"></script>
 
-      function a(r) {
-        if (n[r]) return n[r].exports;
-        var t = n[r] = {
-          i: r,
-          l: !1,
-          exports: {}
-        };
-        return e[r].call(t.exports, t, t.exports, a), t.l = !0, t.exports
-      }
-      a.e = function (e) {
-        var r = [],
-          t = o[e];
-        if (0 !== t)
-          if (t) r.push(t[2]);
-          else {
-            var n = new Promise((function (r, n) {
-              t = o[e] = [r, n]
-            }));
-            r.push(t[2] = n);
-            var u, i = document.createElement("script");
-            i.charset = "utf-8", i.timeout = 120, a.nc && i.setAttribute("nonce", a.nc), i.src = function (e) {
-              return a.p + "static/js/" + ({} [e] || e) + "." + {
-                0: "e5292e09",
-                4: "6cba007f",
-                5: "4c1c3542",
-                6: "b21926d1",
-                7: "a75fcfef",
-                8: "1adffe8a",
-                9: "33b4f728",
-                10: "f4012742"
-              } [e] + ".chunk.js"
-            }(e);
-            var c = new Error;
-            u = function (r) {
-              i.onerror = i.onload = null, clearTimeout(f);
-              var t = o[e];
-              if (0 !== t) {
-                if (t) {
-                  var n = r && ("load" === r.type ? "missing" : r.type),
-                    u = r && r.target && r.target.src;
-                  c.message = "Loading chunk " + e + " failed.\n(" + n + ": " + u + ")", c.name = "ChunkLoadError",
-                    c.type = n, c.request = u, t[1](c)
-                }
-                o[e] = void 0
-              }
-            };
-            var f = setTimeout((function () {
-              u({
-                type: "timeout",
-                target: i
-              })
-            }), 12e4);
-            i.onerror = i.onload = u, document.head.appendChild(i)
-          } return Promise.all(r)
-      }, a.m = e, a.c = n, a.d = function (e, r, t) {
-        a.o(e, r) || Object.defineProperty(e, r, {
-          enumerable: !0,
-          get: t
-        })
-      }, a.r = function (e) {
-        "undefined" != typeof Symbol && Symbol.toStringTag && Object.defineProperty(e, Symbol.toStringTag, {
-          value: "Module"
-        }), Object.defineProperty(e, "__esModule", {
-          value: !0
-        })
-      }, a.t = function (e, r) {
-        if (1 & r && (e = a(e)), 8 & r) return e;
-        if (4 & r && "object" == typeof e && e && e.__esModule) return e;
-        var t = Object.create(null);
-        if (a.r(t), Object.defineProperty(t, "default", {
-            enumerable: !0,
-            value: e
-          }), 2 & r && "string" != typeof e)
-          for (var n in e) a.d(t, n, function (r) {
-            return e[r]
-          }.bind(null, n));
-        return t
-      }, a.n = function (e) {
-        var r = e && e.__esModule ? function () {
-          return e.default
-        } : function () {
-          return e
-        };
-        return a.d(r, "a", r), r
-      }, a.o = function (e, r) {
-        return Object.prototype.hasOwnProperty.call(e, r)
-      }, a.p = "/", a.oe = function (e) {
-        throw console.error(e), e
-      };
-      var i = this["webpackJsonp@nouns/webapp"] = this["webpackJsonp@nouns/webapp"] || [],
-        c = i.push.bind(i);
-      i.push = r, i = i.slice();
-      for (var f = 0; f < i.length; f++) r(i[f]);
-      var l = c;
-      t()
-    }([])
-  </script>
-  <script src="/static/js/3.4f38f33c.chunk.js"></script>
-  <script src="/static/js/main.6b4b88ed.chunk.js"></script>
 </body>
 <div></div>
 
