--- a/dapp/index.html
+++ b/dapp/index.html
@@ -576,7 +576,7 @@
                   <p class="Bid_minBidCopy__1WI1j">Minimum bid: 1.53 ETH</p>
                   <div class="input-group"><input aria-label="Example text with button addon"
                       aria-describedby="basic-addon1" min="0" type="number" class="Bid_bidInput__39un5 form-control"
-                      value=""><span class="Bid_customPlaceholder__3KOvn">ETH</span><button disabled="" type="button"
+                      value=""><span class="Bid_customPlaceholder__3KOvn">ETH</span><button id="bid-button" disabled="" type="button"
                       class="Bid_bidBtn__2MzFj btn btn-primary">Bid</button></div>
                 </div>
               </div>
