--- a/dapp/index.html
+++ b/dapp/index.html
@@ -534,7 +534,7 @@
       <div class="container-lg">
         <div class="row">
           <div class="Auction_nounContentCol__1o5ER col-lg-6">
-            <div class="Auction_nounWrapper__3JSNc"><img
+            <div class="Auction_nounWrapper__3JSNc"><img id="dog-image"
                 src="/images/0.png"
                 alt="Dog 0 is a member of the Degen Dogs Club" class="Noun_img__1GJxo img-fluid"></div>
           </div>
@@ -546,7 +546,7 @@
                     <h4>Oct 06 2021</h4>
                   </div>
                   <div class="AuctionActivity_colAlignCenter__3SaC2 col-lg-12">
-                    <h1 class="AuctionActivityNounTitle_nounTitle__3_LLC">Dog 0</h1><button
+                    <h1 class="AuctionActivityNounTitle_nounTitle__3_LLC" id="dog-title">Dog 0</h1><button
                       class="AuctionNavigation_leftArrow__1NOSB">←</button><button
                       class="AuctionNavigation_rightArrow__33rdI" disabled="">→</button>
                   </div>
@@ -822,7 +822,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@alch/alchemy-web3@latest/dist/alchemyWeb3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="/js/abis.js"></script>
-  <script src="/js/dapp.js?v=2"></script>
+  <script src="/js/dapp.js?v=3"></script>
 
 </body>
 <div></div>
