--- a/dapp/index.html
+++ b/dapp/index.html
@@ -543,7 +543,7 @@
               <div class="AuctionActivity_informationRow__2BOSj">
                 <div class="AuctionActivity_activityRow__1xuKY row">
                   <div class="col-lg-12">
-                    <h4>Oct 06 2021</h4>
+                    <h4 id="dog-date">Oct 06 2021</h4>
                   </div>
                   <div class="AuctionActivity_colAlignCenter__3SaC2 col-lg-12">
                     <h1 class="AuctionActivityNounTitle_nounTitle__3_LLC" id="dog-title">Dog 0</h1><button
@@ -573,7 +573,7 @@
               </div>
               <div class="AuctionActivity_activityRow__1xuKY row">
                 <div class="col-lg-12">
-                  <p class="Bid_minBidCopy__1WI1j">Minimum bid: 1.53 ETH</p>
+                  <p class="Bid_minBidCopy__1WI1j">Minimum bid: <span id="dog-min-bid">1.53</span> ETH</p>
                   <div class="input-group"><input aria-label="Example text with button addon"
                       aria-describedby="basic-addon1" min="0" type="number" class="Bid_bidInput__39un5 form-control"
                       value=""><span class="Bid_customPlaceholder__3KOvn">ETH</span><button id="bid-button" disabled="" type="button"
@@ -822,7 +822,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@alch/alchemy-web3@latest/dist/alchemyWeb3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="/js/abis.js"></script>
-  <script src="/js/dapp.js?v=4"></script>
+  <script src="/js/dapp.js?v=5"></script>
 
 </body>
 <div></div>
