--- a/dapp/index.html
+++ b/dapp/index.html
@@ -555,7 +555,7 @@
                   <div class="AuctionActivity_currentBidCol__3vgXb col-lg-5">
                     <div class="CurrentBid_section__2oRi6">
                       <h4>Current bid</h4>
-                      <h2>Ξ 1.50</h2>
+                      <h2>Ξ <span class="dog-current-bid">1.50</span></h2>
                     </div>
                   </div>
                   <div class="AuctionActivity_auctionTimerCol__2oKfX col-lg-5">
@@ -592,7 +592,7 @@
                           <div class="BidHistory_bidDate__32l9k">Oct 06 at 07:29 am</div>
                         </div>
                         <div class="BidHistory_rightSectionWrapper__3oem5">
-                          <div class="BidHistory_bidAmount__7W-Hz">Ξ <span id="dog-current-bid">1.50</span></div>
+                          <div class="BidHistory_bidAmount__7W-Hz">Ξ <span class="dog-current-bid">1.50</span></div>
                           <div class="BidHistory_linkSymbol__29ypX"><a
                               href="https://etherscan.io/tx/0xcae6526f7a831630cfa48ba17176f5e75fcada409e078d56707902611020c044"
                               target="_blank" rel="noreferrer"><svg aria-hidden="true" focusable="false"
@@ -822,7 +822,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@alch/alchemy-web3@latest/dist/alchemyWeb3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="/js/abis.js"></script>
-  <script src="/js/dapp.js?v=6"></script>
+  <script src="/js/dapp.js?v=7"></script>
 
 </body>
 <div></div>
