--- a/dapp/index.html
+++ b/dapp/index.html
@@ -531,7 +531,7 @@
           </div>
         </div>
       </nav>
-      <div class="container-lg">
+      <div id="dog" class="container-lg">
         <div class="row">
           <div class="Auction_nounContentCol__1o5ER col-lg-6">
             <div class="Auction_nounWrapper__3JSNc"><img id="dog-image"
@@ -822,7 +822,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@alch/alchemy-web3@latest/dist/alchemyWeb3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="/js/abis.js"></script>
-  <script src="/js/dapp.js?v=27"></script>
+  <script src="/js/dapp.js?v=28"></script>
 
 </body>
 <div></div>
