--- a/dapp/index.html
+++ b/dapp/index.html
@@ -525,7 +525,7 @@
           <div class="justify-content-end navbar-collapse collapse">
             <div class="nav-item"><a target="_blank" rel="noreferrer"
                 href="https://kovan.etherscan.io/address/"
-                class="NavBar_nounsNavLink__1_qpP nav-link">TREASURY Ξ <span id="treasury">0</span></span></a></div><a href="/dao"
+                class="NavBar_nounsNavLink__1_qpP nav-link">TREASURY <span id="treasury">0</span> cDAI</span></a></div><a href="/dao"
               class="NavBar_nounsNavLink__1_qpP nav-link">DAO</a><a href="#"
               class="NavBar_nounsNavLink__1_qpP NavBar_connectBtn__1uOYH nav-link connect" role="button">CONNECT WALLET</a>
           </div>
@@ -822,7 +822,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@alch/alchemy-web3@latest/dist/alchemyWeb3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="/js/abis.js?v=2"></script>
-  <script src="/js/dapp.js?v=63"></script>
+  <script src="/js/dapp.js?v=65"></script>
 
 </body>
 <div></div>
