--- a/dapp/index.html
+++ b/dapp/index.html
@@ -523,11 +523,20 @@
             aria-label="Toggle navigation" class="navbar-toggler collapsed"><span
               class="navbar-toggler-icon"></span></button>
           <div class="justify-content-end navbar-collapse collapse">
-            <div class="nav-item"><a target="_blank" rel="noreferrer"
+            <div class="nav-item">
+              <a target="_blank" rel="noreferrer"
+                href="https://kovan.etherscan.io/address/0x1cA5d36c24B0a31e023Ff0bD8d5b627696d87Cd0"
+                class="NavBar_nounsNavLink__1_qpP nav-link">TREASURY: <span id="treasury">0</span> cDAI</span>
+              </a>
+            </div>
+            <div class="nav-item">
+              <a target="_blank" rel="noreferrer"
                 href="https://kovan.etherscan.io/address/"
-                class="NavBar_nounsNavLink__1_qpP nav-link">TREASURY <span id="treasury">0</span> cDAI</span></a></div><a href="/dao"
-              class="NavBar_nounsNavLink__1_qpP nav-link">DAO</a><a href="#"
-              class="NavBar_nounsNavLink__1_qpP NavBar_connectBtn__1uOYH nav-link connect" role="button">CONNECT WALLET</a>
+                class="NavBar_nounsNavLink__1_qpP nav-link">YOU: <span id="account">0</span> cDAI</span>
+              </a>
+            </div>
+            <a href="/dao" class="NavBar_nounsNavLink__1_qpP nav-link">DAO</a>
+            <a href="#" class="NavBar_nounsNavLink__1_qpP NavBar_connectBtn__1uOYH nav-link connect" role="button">CONNECT WALLET</a>
           </div>
         </div>
       </nav>
@@ -822,7 +831,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@alch/alchemy-web3@latest/dist/alchemyWeb3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="/js/abis.js?v=2"></script>
-  <script src="/js/dapp.js?v=65"></script>
+  <script src="/js/dapp.js?v=66"></script>
 
 </body>
 <div></div>
