--- a/dapp/index.html
+++ b/dapp/index.html
@@ -531,7 +531,7 @@
             </div>
             <div class="nav-item">
               <a target="_blank" rel="noreferrer"
-                href="https://kovan.etherscan.io/address/"
+                href="https://app.superfluid.finance/dashboard"
                 class="NavBar_nounsNavLink__1_qpP nav-link">YOU: <span id="account">0</span> cDAI</span>
               </a>
             </div>
@@ -763,7 +763,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@alch/alchemy-web3@latest/dist/alchemyWeb3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="/js/abis.js?v=2"></script>
-  <script src="/js/dapp.js?v=78"></script>
+  <script src="/js/dapp.js?v=79"></script>
 
 </body>
 <div></div>
