--- a/dapp/index.html
+++ b/dapp/index.html
@@ -694,7 +694,7 @@
                         <li>THe ETH from the winning bid is swapped on Uniswap for DAI</li>
                         <li>The resulting DAI is then deposited in Compound Finance, and begins to earn yield</li>
                         <li>A portion of the Compound tokens (cDAI) representing the deposits are then <em>upgraded</em> to "Super Tokens" in the Superfluid protocol.</li>
-                        <li>Then <strike>dog urine</strike> Super Tokens then begin <em>streaming</em>em> -- every second -- back to Dog owners:</li>
+                        <li>Then <strike>dog urine</strike> Super Tokens then begin <em>streaming</em> -- every second -- back to Dog owners:</li>
                         <li>10% of of the proceeds of the auction stream back to the Dog Owner over the next 365 days. If the Dog is sold or transfered, the stream switches to the new owner.</li>
                         <li>40% of the proceeds of each auction are <em>shared by all current Dog owners</em> and streamed to them over the next 365 days.</li>
                         <li>20% of the proceeds for each auction go to the owner of the 10th Dog <em>before</em> this one. For example, 20% of the proceeds of the auction for Dog 11 will get streamed to the owner of Dog 1, over the next 365 days.</li>
@@ -717,10 +717,10 @@
                     <div class="card-body">
                       <p>Degen Dogs are composed of multiple traits, including:</p>
                       <ul>
-                        <li>bodies (?)</li>
-                        <li>accessories (?) </li>
-                        <li>headwear (?) </li>
-                        <li>glasses (?)</li>
+                        <li>bodies (tbd)</li>
+                        <li>accessories (tbd) </li>
+                        <li>headwear (tbd) </li>
+                        <li>glasses (tbd)</li>
                       </ul>
                     </div>
                   </div>
@@ -763,7 +763,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@alch/alchemy-web3@latest/dist/alchemyWeb3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="/js/abis.js?v=2"></script>
-  <script src="/js/dapp.js?v=81"></script>
+  <script src="/js/dapp.js?v=82"></script>
 
 </body>
 <div></div>
