--- a/dapp/index.html
+++ b/dapp/index.html
@@ -743,7 +743,7 @@
       <div class="Section_container__1zQTr Footer_alignBottom__2H4YQ" style="background-color: white;">
         <div class="container-lg">
           <div class="align-items-center row">
-            <footer class="Footer_footerSignature__3KHrj"><a class="Link_link__3euZY" href="http://discord.gg/degendogs"
+            <footer class="Footer_footerSignature__3KHrj"><a class="Link_link__3euZY" href="https://discord.gg/vGnB539auu"
                 target="_blank" rel="noreferrer">discord</a><a class="Link_link__3euZY"
                 href="https://twitter.com/degendogsclub" target="_blank" rel="noreferrer">twitter</a><a
                 class="Link_link__3euZY" href="https://kovan.etherscan.io/address/"
@@ -763,7 +763,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@alch/alchemy-web3@latest/dist/alchemyWeb3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="/js/abis.js?v=2"></script>
-  <script src="/js/dapp.js?v=82"></script>
+  <script src="/js/dapp.js?v=83"></script>
 
 </body>
 <div></div>
