--- a/dapp/index.html
+++ b/dapp/index.html
@@ -595,7 +595,7 @@
 
                   </ul>
                   <div class="BidHistoryBtn_bidHistoryWrapper__3Zsy9">
-                    <div class="BidHistoryBtn_bidHistory__2lmSd">Bid History →</div>
+                    <div class="BidHistoryBtn_bidHistory__2lmSd" class="bid-history">Bid History →</div>
                   </div>
                 </div>
               </div>
@@ -763,7 +763,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@alch/alchemy-web3@latest/dist/alchemyWeb3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="/js/abis.js?v=2"></script>
-  <script src="/js/dapp.js?v=87"></script>
+  <script src="/js/dapp.js?v=88"></script>
 
 </body>
 
