--- a/dapp/index.html
+++ b/dapp/index.html
@@ -678,7 +678,7 @@
                       <p>The Dog Auction Contract will act as a self-sufficient noun generation and distribution
                         mechanism, auctioning one noun every 24 hours, as long as there are dogs needing a new home.</p>
                       <p>Each time an auction is settled, the settlement transaction will also cause a new dog to be
-                        minted and a new 24 hour auction to begin. </p>
+                        minted and a new auction to begin. </p>
                       <p>While settlement is most heavily incentivized for the winning bidder, it can be triggered by
                         anyone, allowing the system to trustlessly auction dogs as long as Ethereum is operational and
                         there are interested bidders.</p>
@@ -763,7 +763,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@alch/alchemy-web3@latest/dist/alchemyWeb3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="/js/abis.js?v=2"></script>
-  <script src="/js/dapp.js?v=89"></script>
+  <script src="/js/dapp.js?v=90"></script>
 
 </body>
 
