--- a/dapp/index.html
+++ b/dapp/index.html
@@ -535,7 +535,7 @@
                 class="NavBar_nounsNavLink__1_qpP nav-link">YOU: <span id="account">0</span> cDAI</span>
               </a>
             </div>
-            <a href="/dao" class="NavBar_nounsNavLink__1_qpP nav-link">DAO</a>
+            <a href="#dao" id="dao-nav" class="NavBar_nounsNavLink__1_qpP nav-link">DAO</a>
             <a href="#" class="NavBar_nounsNavLink__1_qpP NavBar_connectBtn__1uOYH nav-link connect" role="button">CONNECT WALLET</a>
           </div>
         </div>
@@ -704,7 +704,7 @@
                   </div>
                 </div>
                 <div class="Documentation_card__1TWtt card">
-                  <div class="Documentation_cardHeader__xv_vO card-header">Dog DAO?</div>
+                  <div id="dao" class="Documentation_cardHeader__xv_vO card-header">Dog DAO?</div>
                   <div class="collapse">
                     <div class="card-body">
                       <p>Degen Dogs are currently on testnet. The plan for a mainnet launch would include a DAO to manage the Club and treasury. To start, this might be comprised of a small number of Dogfathers, with all Dog owners automatically joining the DAO. Bark if you want in.</p>
@@ -763,7 +763,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@alch/alchemy-web3@latest/dist/alchemyWeb3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="/js/abis.js?v=2"></script>
-  <script src="/js/dapp.js?v=95"></script>
+  <script src="/js/dapp.js?v=97"></script>
 
 </body>
 
