--- a/dapp/index.html
+++ b/dapp/index.html
@@ -36,7 +36,7 @@
           <div class="justify-content-end navbar-collapse collapse">
             <div class="nav-item">
               <a target="_blank" rel="noreferrer"
-                href="https://kovan.etherscan.io/address/0x1dae97a860bDf66dFBb5312D771f5a3b379D35D9"
+                href="https://kovan.etherscan.io/address/0x8B231C8323E448152605B35BEb8c2498731C5D30"
                 class="NavBar_nounsNavLink__1_qpP nav-link">TREASURY: <span id="treasury">0</span> cDAI</span>
               </a>
             </div>
@@ -279,7 +279,7 @@
             <footer class="Footer_footerSignature__3KHrj"><a class="Link_link__3euZY" href="https://discord.gg/vGnB539auu"
                 target="_blank" rel="noreferrer">discord</a><a class="Link_link__3euZY"
                 href="https://twitter.com/degendogsclub" target="_blank" rel="noreferrer">twitter</a><a
-                class="Link_link__3euZY" href="https://kovan.etherscan.io/address/"
+                class="Link_link__3euZY" href="https://kovan.etherscan.io/address/0x8B231C8323E448152605B35BEb8c2498731C5D30"
                 target="_blank" rel="noreferrer">etherscan</a></footer>
           </div>
         </div>
@@ -296,7 +296,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@alch/alchemy-web3@latest/dist/alchemyWeb3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="/js/abis.js?v=2"></script>
-  <script src="/js/dapp.js?v=113"></script>
+  <script src="/js/dapp.js?v=114"></script>
 
 </body>
 
