readme and text fixes

--- a/dapp/index.html
+++ b/dapp/index.html
@@ -202,7 +202,7 @@
                     <div class="card-body">
                       <p>Degen Dogs is an experiment that combines NFTs and DeFi. The proceeds of each auction are sent to the treasury. That's when the DeFi Dog magic starts:</p>
                       <ul>
-                        <li>THe ETH from the winning bid is swapped on Uniswap for DAI</li>
+                        <li>The ETH from the winning bid is swapped on Uniswap for DAI</li>
                         <li>The resulting DAI is then deposited in Compound Finance, and begins to earn yield</li>
                         <li>A portion of the Compound tokens (cDAI) representing the deposits are then <em>upgraded</em> to "Super Tokens" in the Superfluid protocol.</li>
                         <li>Then <strike>dog urine</strike> Super Tokens then begin <em>streaming</em> -- every second -- back to Dog owners:</li>
@@ -211,6 +211,7 @@
                         <li>20% of the proceeds for each auction go to the owner of the 10th Dog <em>before</em> this one. For example, 20% of the proceeds of the auction for Dog 11 will get streamed to the owner of Dog 1, over the next 365 days.</li>
                         <li>In future, the Club may decide to change the DeFi investments and distributions in interesting ways.</li>
                       </ul>
+                      <p>Chew on that!</p>
                     </div>
                   </div>
                 </div>
@@ -240,7 +241,7 @@
                   <div class="Documentation_cardHeader__xv_vO card-header">Degenerative Artwork</div>
                   <div class="collapse">
                     <div class="card-body">
-                      <p>Degen Dogs are dogs in the same spirit as the Cryptopunks. We call it <em>degenerative art</em>em</em>.</p>
+                      <p>Degen Dogs are dogs in the same spirit as the Cryptopunks. We call it <em>degenerative art</em>.</p>
                       <p>Future dogs may be submitted and voted on by the club, with winning artists earning a cut. Stay tuned.</p>
                     </div>
                   </div>
