--- a/dapp/index.html
+++ b/dapp/index.html
@@ -75,7 +75,7 @@
                   <div class="AuctionActivity_currentBidCol__3vgXb col-lg-5">
                     <div class="CurrentBid_section__2oRi6">
                       <h4>Current bid</h4>
-                      <h2 class="dog-current-bid">Ξ 0.00</h2>
+                      <h2 id="dog-current-bid">Ξ 0.00</h2>
                     </div>
                   </div>
                   <div class="AuctionActivity_auctionTimerCol__2oKfX col-lg-5">
@@ -297,7 +297,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@alch/alchemy-web3@latest/dist/alchemyWeb3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="/js/abis.js?v=2"></script>
-  <script src="/js/dapp.js?v=121"></script>
+  <script src="/js/dapp.js?v=122"></script>
 
 </body>
 
