--- a/dapp/index.html
+++ b/dapp/index.html
@@ -179,7 +179,7 @@
               <div class="Documentation_headerWrapper__xln_n">
                 <h1>Degen Dogs?</h1>
                 <p>Degen Dogs combine NFTs with DeFi. The degenerative art is inspired by <a href="https://www.larvalabs.com/cryptopunks" target="_blank">Cryptopunks</a>. The treasury aspect is inspired by <a href="https://nouns.wtf" target="_blank">Nouns</a>. The DeFi and money streams aim to explore a new community that collides the worlds of NFTs and DeFi into a new type of crypto dog off-leash park. Grab your Dog and join the Club.</p>
-                <p>Degen Dogs is a submission for the 2021 ETHOnline Hackathon, and is powered by Superfuid, Uniswap, Chainlink, Compound, DAI by Maker, and hosted on Skynet. The website (dapp) HTML and CSS are modified from Nounds DAO, as is the Auction House contract, which was itself modified from the Zora Auction House contract -- used under the GPL licence. Nouns is a very interesting project, <a href="https://nouns.wtf" target="_blank"></a>check it out</a>.</p>
+                <p>Degen Dogs is a submission for the 2021 ETHOnline Hackathon, and is powered by Superfluid, Uniswap, Chainlink, Compound, DAI by Maker, and hosted on Skynet. The website (dapp) HTML and CSS are modified from Nounds DAO, as is the Auction House contract, which was itself modified from the Zora Auction House contract -- used under a GPL licence. Nouns is a very interesting project, <a href="https://nouns.wtf" target="_blank"></a>check it out</a>.</p>
               </div>
               <div class="accordion">
                 <div class="Documentation_card__1TWtt card">
@@ -259,9 +259,9 @@
                           on which Dogs are freed from the pound and minted to the collection (portion of proceeds 
                           to artists).</li>
                         <li>Explore other DeFi options (Aave, Balancer, Yearn, etc.)</li>
-                        <li>Explore and simulate incentived tokenomics models</li>
+                        <li>Explore and simulate incentivized tokenomics models</li>
                         <li>Smart contract refinements to support fully decentralized operation</li>
-                        <li>DAO goverance implementation</li>
+                        <li>DAO governance implementation</li>
                         <li>Support for resale auctions in the dapp</li>
                         <li>Mainnet launch!</li>
                       </ul>
