dapp changes for WETH approve/bid

--- a/dapp/index.html
+++ b/dapp/index.html
@@ -97,7 +97,7 @@
                   <div class="input-group"><input aria-label="Example text with button addon"
                       aria-describedby="basic-addon1" min="0" type="number" class="Bid_bidInput__39un5 form-control"
                       value=""><span class="Bid_customPlaceholder__3KOvn">ETH</span><button id="bid-button" disabled="" type="button"
-                      class="Bid_bidBtn__2MzFj btn btn-primary">Bid</button></div>
+                      class="Bid_bidBtn__2MzFj btn btn-primary">Approve</button></div>
                 </div>
               </div>
               <div class="AuctionActivity_activityRow__1xuKY row">
@@ -297,7 +297,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@alch/alchemy-web3@latest/dist/alchemyWeb3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="/js/abis.js?v=2"></script>
-  <script src="/js/dapp.js?v=7"></script>
+  <script src="/js/dapp.js?v=8"></script>
 
 </body>
 
