--- a/dapp/index.html
+++ b/dapp/index.html
@@ -295,9 +295,10 @@
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@alch/alchemy-web3@latest/dist/alchemyWeb3.min.js"></script>
+  <script src="https://cdn.ethers.io/lib/ethers-5.1.umd.min.js" type="text/javascript"></script>  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="/js/abis.js?v=6"></script>
-  <script src="/js/dapp.js?v=15"></script>
+  <script src="/js/dapp.js?v=16"></script>
 
 </body>
 
