--- a/dapp/index.html
+++ b/dapp/index.html
@@ -55,7 +55,7 @@
         <div class="row">
           <div class="Auction_nounContentCol__1o5ER col-lg-6">
             <div class="Auction_nounWrapper__3JSNc"><img id="dog-image"
-                src="/images/0.png"
+                src="/images/dog336.png"
                 alt="Dog 0 is a member of the Degen Dogs Club" class="Noun_img__1GJxo img-fluid"></div>
           </div>
           <div class="Auction_auctionActivityCol__3U2jw col-lg-6">
