tweaks and tests

--- a/dapp/index.html
+++ b/dapp/index.html
@@ -36,14 +36,14 @@
           <div class="justify-content-end navbar-collapse collapse">
             <div class="nav-item">
               <a target="_blank" rel="noreferrer"
-                href="https://kovan.etherscan.io/address/0x8B231C8323E448152605B35BEb8c2498731C5D30"
-                class="NavBar_nounsNavLink__1_qpP nav-link">TREASURY: <span id="treasury">0</span> cDAI</span>
+                href="https://polygonscan.com/address/"
+                class="NavBar_nounsNavLink__1_qpP nav-link">TREASURY: <span id="treasury">0</span> idleWETH</span>
               </a>
             </div>
             <div class="nav-item">
               <a target="_blank" rel="noreferrer"
                 href="https://app.superfluid.finance/dashboard"
-                class="NavBar_nounsNavLink__1_qpP nav-link">YOU: <span id="account">0</span> cDAI</span>
+                class="NavBar_nounsNavLink__1_qpP nav-link">YOU: <span id="account">0</span> idleWETHx</span>
               </a>
             </div>
             <a href="#dao" id="dao-nav" class="NavBar_nounsNavLink__1_qpP nav-link">DAO</a>
